Reidnax_Assessment_Task_Scheduler

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,117 @@
-.App {
-  text-align: center;
+* { 
+  margin: 0; 
+  padding: 0; 
+  box-sizing: border-box; 
+} 
+
+body { 
+  font-family: Arial, sans-serif; 
+  background-color: #f0f0f0; 
+  margin: 0; 
+  padding: 0; 
+  color: #333; 
+} 
+
+header { 
+  background-color: white; 
+  color: rgb(68, 115, 201); 
+  text-align: center; 
+  padding: 1rem 0; 
+  box-shadow: 0 4px 18px grey; 
+} 
+main { 
+  max-width: 1000px; 
+  margin: 20px auto; 
+  padding: 20px; 
+  background-color: #fff; 
+  box-shadow: 0 4px 18px grey; 
+  border-radius: 15px; 
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+.all-input { 
+  display: flex; 
+  flex-wrap: wrap; 
+  gap: 10px; 
+  margin-bottom: 20px; 
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+} 
+
+.all-input  input, 
+.all-input  select, 
+.all-input  button { 
+    padding: 10px; 
+    border: 1px solid #ccc; 
+    font-size: 16px; 
+    flex: 1; 
+    border-radius: 10px; 
 }
 
-.App-link {
-  color: #61dafb;
-}
+button { 
+  background-color: green; 
+  color: white; 
+  border: none; 
+  cursor: pointer; 
+} 
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+.upcoming-task { 
+  border: 1px solid #ddd; 
+  padding: 10px; 
+} 
+
+table { 
+  width: 100%; 
+  margin-top: 20px; 
+  background-color: #fff; 
+  border: 1px solid #ddd; 
+} 
+
+table th, 
+table td { 
+  padding: 7px; 
+  border-bottom: 1px solid #ddd; 
+  text-align: left; 
+
+} 
+
+table th { 
+  background-color: #eee; 
+  color: black; 
+  border-radius: 10px; 
+} 
+
+.buttons-edit{
+    width: auto;
+    padding: 10px; 
+    font-size: 16px; 
+    flex: 1; 
+    border-radius: 15px; 
+    background-color: crimson; 
+    color: white; 
+    border: none; 
+    cursor: pointer; 
+} 
+
+.complted-task { 
+  margin-top: 20px; 
+} 
+
+.complted-task{ 
+  padding: 10px; 
+  border: 1px solid crimson; 
+  border-radius: 5px; 
+  background-color: #eaffea; 
+} 
+
+.comp-heading { 
+  color: #28a745; 
+} 
+
+h2 { 
+  font-size: 1.3rem; 
+} 
+
+.heading { 
+  padding-bottom: 10px; 
+} 
+
